# Riviamigo

./: .dockerignore  .env.example  .eslintrc.cjs  .gitattributes  .gitignore  AGENTS.md  BRANDING.md  CLAUDE.md  README.md  SECURITY.md  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  riviamigo_agent_specs.md  riviamigo_agent_specs_addendum.md  rust-toolchain.toml  turbo.json
apps/api/: .dockerignore  .env.example  Cargo.toml  Dockerfile
apps/api/.sqlx/: query-010a2f8fa14c11555893cde95141239f24dedf8c1d4fe320e0ea33162e5dafda.json  query-05b8158832d3310c720acca12c7d175ca37acbf9735cf6221df772eb0bbdbbf3.json  query-0ac02582f61b137a8c5a1f5c0e5dc6dbe737c615a0c75b6c4e0b9e43a5c56466.json  query-10f2c95ebb79789fe86854dbede8460fc6a632f448c23548b4302fe8d3a219de.json  query-157551c2547bbeb9c4a222e9464466a9ddf819d384584c9afd208b17cf48722d.json  query-19af6a9db4cfa593abaa98c1a38ae8d808999183239622c7e61bfa695825be7c.json  query-1c6806783d8f02126856eb8b0b5cdc1a3f965ca26d7532c38d83a11d8fad75a3.json  query-2021f6cc13cc193090550bf09aba114097f19fde898c15e55b671ea583e681a6.json  query-2541a396e1e82dc3d705bfc238ffee1f627f95fe60b806d23a7e1cbe24616cb4.json  query-2c52615ca83451e61f654bdcd0d60d8b93dd6735027e6af745a7b37d36a6714d.json  query-2d92953fb8f629c2c157c451acc9d60904205db337ff69a75e6030f01fdc2b57.json  query-2eac68ac9e9bd6433a727ce00f4949e9a7995d7445965583f449240b09447de3.json  query-2f5693533d572ddaeb0c220f05c289caf1e5d1d0d2c87178e6c37a01e275d2e2.json  query-3088c391aaae9b7accb97b83041e3ed64a069ffa9b331c2867339b2e86b0a5df.json  query-312550c4812198dd9ca2d487ab944a93b3961e44d3416210e809a65410382cc7.json  query-31dfe20db96cabe8f05c19e8e890a4b98c99ec8d6bddf09eb90bbc490f63a3c0.json  query-440075dc26f76117086e1a5be9ed02d78fc62115fca07c1d19549d154d97e591.json  query-455e44645dd3a935ba8d30f3cf45694cc486b878ed13a00a57210ce9f1a53f33.json  query-460461f7a729e0b58f42cecf4300b241634f0a6b1f532a9dc629fcc3f0803581.json  query-47177b0c7b705a807157aba75765cd961ee9c620f5a8bba46bf9c0b3d0df4973.json  query-49bbf29aa5cedc29b5cc217a8142f6b9b83b7b87fb90f145facfbcb43ef99815.json  query-4a01aafb0e4021e0c49737fbd273ca21461e9394843aff122fa1a00e6b50c41d.json  query-4ab15b92f5d9f7108de5deb04aa9551823f77fd9a10270d3205439891fadbc40.json  query-4c298c00989f337e80ed5dc56867e6fe6d30c87c8fd9407f8684f17a2c15d19c.json  query-4c2999483bfa4e6aa5c3c87b905ab4f2fca86806763325c0d3d84b5047bccb0f.json  query-4cfcbfff0a7d0587d36ec59b4ed3566011d9ec303cc07a91326cbca86e375006.json  query-4d33507f572d1638c2641b4b0bad05879b25343e2d8d0e3efafb41ffaa3756b8.json  query-4e08dbe2fc5d18220fa440ffc23c96db63c5d036dce5056a50cfed73049b728e.json  query-518406f6eaf23fe1125bb255508396d0add92d5ae44a158bf497b3150cc29972.json  query-526877fa52e62f99ff73af8522ce2691d370f234dcd9650b89f60d0d6ddcaca3.json  query-572922475f89e012d8a41199f18ab7fed9bcb9065545ee794e276a59fd775aa6.json  query-5e7ba25181c78f6c781ca1c410c42755e99f7c0aa806fd297687810aa5992c80.json  query-65301539a6a118df2e3ac7f5982a23cfb3f95e57eb530929479ba6b308b4e6c0.json  query-6d86fd0a1f41115def828051e7ec33e3c5a44ecb623fb14b3c8817fd75f45714.json  query-6f9506c26b137885adff8d285f5d00f21714ef5d1b931d987be4dcecd806b98e.json  query-72742a6d4a13efd483975d02d7485321b770d72a78481efcae65ac3a15df16e3.json  query-748439e92a1df023331ecacbd1ef95be8f7f54069098d8429ac691e4608a3c85.json  query-767c972a9463960a0c5a65f9a2df73b2e8bb348686444affb94e1f3810f6e88f.json  query-7814cd157fe7b8471e22b9d0a17f5125bf133bcd675f2041b3e560dd03dff45c.json  query-7aac16b027085316d1e4ea055ed9566404193e486922e9ee628766ce70888139.json  (+54 more)
apps/api/dashboards/: battery.json  charging.json  dashboard.json  efficiency.json  trips.json
apps/api/fixtures/demo/: history-v1.json
apps/api/migrations/: 0001_initial_schema.sql  0001_schema_init.sql  0002_global_app_timezone.sql  0002_metrics_expansion.sql  0002_telemetry_1min_hourly_refresh.sql  0002_telemetry_hypertable.sql  0003_continuous_aggregates.sql  0003_dashboard_baseline_revision.sql  0003_dashboards.sql  0003_security_events.sql  0004_api_key_access_levels.sql  0004_backup_upload_restore.sql  0004_materialized_views.sql  0005_indexes.sql  0005_s3_backup_destinations.sql  0005_vehicle_state_images.sql  0006_system_config.sql  0006_tire_pressure_units.sql  0007_add_geofences_addresses.sql  0008_add_cost_profiles.sql  0009_add_state_periods_software_versions.sql  0010_add_service_events.sql  0011_add_telemetry_session_links.sql  0012_add_trip_columns.sql  0013_add_charge_session_columns.sql  0014_add_telemetry_unique_constraint.sql  0015_add_telemetry_spatial_idx.sql  0016_create_continuous_aggregates.sql  0017_add_tou_cost_profiles.sql  0018_rivian_stewardship.sql  0019_dashboard_config_v2.sql  0020_backup_management.sql  0021_backup_artifacts_restore_requests.sql  0022_extend_telemetry_fields.sql  0023_vehicle_enrichment.sql  0024_charge_enrichment_schedules.sql  0025_backfill_status.sql  0026_clean_user_dashboards.sql  0027_security_events.sql  0028_unique_user_vehicle.sql  (+34 more)
apps/api/src/: config.rs  errors.rs  keys.rs  lib.rs  logging.rs  main.rs
apps/api/src/db/: migrations.rs  mod.rs  pool.rs  users.rs  vehicles.rs
apps/api/src/ingestion/: charge_detector.rs  location.rs  mod.rs  parallax.rs  parser.rs  poller.rs  rivian_auth.rs  rivian_poll.rs  session_store.rs  supervisor.rs  trip_detector.rs  worker.rs  ws_client.rs
apps/api/src/middleware/: auth.rs  rate_limit.rs
apps/api/src/models/: charge_session.rs  cost_profile.rs  geofence.rs  mod.rs  state_period.rs  trip.rs  (+2 more)
apps/api/tests/: auth_integration.rs  backup_integration.rs  continuous_aggregate_policy_integration.rs  trip_enrichment_integration.rs
tools/graph-exploration/: Cargo.toml  README.md
tools/graph-exploration/src/: main.rs
(+401 files in other folders)
