[package]
name    = "riviamigo-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[lib]
name = "riviamigo_api"
path = "src/lib.rs"

[[bin]]
name = "riviamigo-api"
path = "src/main.rs"

[dependencies]
# Web framework
axum            = { version = "0.7", features = ["macros", "ws"] }
axum-extra      = { version = "0.9", features = ["typed-header"] }
tower           = { version = "0.4", features = ["full"] }
tower-http      = { version = "0.5", features = ["cors", "compression-gzip", "request-id", "trace", "limit", "set-header"] }
tower_governor  = "0.4"
governor        = "0.6.3"

# Async runtime
tokio           = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }

# Database
sqlx            = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json", "migrate"] }

# Cache
redis           = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# HTTP client
reqwest         = { version = "0.12", features = ["json", "native-tls"] }

# Serialization
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"

# Auth
jsonwebtoken    = "9"
argon2          = "0.5"

# Encryption
age             = { version = "0.10", features = ["async"] }
rsa             = { version = "0.9", features = ["pem"] }

# Types
uuid            = { version = "1", features = ["v4", "serde"] }
chrono          = { version = "0.4", features = ["serde"] }
chrono-tz       = "0.10"

# Config
envy            = "0.4"

# Error handling
thiserror       = "1"
anyhow          = "1"

# Observability
tracing                   = "0.1"
tracing-subscriber        = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
once_cell       = "1"
futures         = "0.3"
async-trait     = "0.1"
base64          = "0.22"
hex             = "0.4"
rand            = "0.8"
sha2            = "0.10"
http            = "1"
url             = "2"

[dev-dependencies]
testcontainers          = "0.18"
testcontainers-modules  = { version = "0.4", features = ["postgres"] }
proptest                = "1"
tokio                   = { version = "1", features = ["full", "test-util"] }
axum-test               = "18.0.0"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
