[package]
name    = "riviamigo-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.97"

[lib]
name = "riviamigo_api"
path = "src/lib.rs"

[[bin]]
name = "riviamigo-api"
path = "src/main.rs"

[[bin]]
name = "riviamigo-restore-agent"
path = "src/bin/riviamigo-restore-agent.rs"

[dependencies]
# Web framework
axum            = { version = "0.8", features = ["macros", "ws"] }
tower           = { version = "0.5", features = ["full"] }
tower-http      = { version = "0.7", features = ["cors", "compression-gzip", "request-id", "trace", "limit", "set-header"] }
tower_governor  = "0.8"
governor        = "0.10.4"

# Async runtime
tokio           = { version = "1", features = ["full"] }
tokio-util      = { version = "0.7", features = ["io"] }
tokio-tungstenite = { version = "0.30", features = ["native-tls"] }

# Database
sqlx            = { version = "0.9", features = ["postgres", "runtime-tokio", "tls-native-tls", "uuid", "chrono", "json", "migrate"] }

# Cache
redis           = { version = "1", features = ["tokio-comp", "connection-manager"] }

# HTTP client
reqwest         = { version = "0.13", features = ["json", "native-tls", "query"] }
aws-sdk-s3      = "1.139.0"

# Serialization
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"

# Auth
jsonwebtoken    = { version = "10", default-features = false, features = ["use_pem", "aws_lc_rs"] }
argon2          = "0.5"

# Encryption
age             = { version = "0.12", features = ["async"] }
aws-lc-rs       = "1"
pem             = "3"

# Types
uuid            = { version = "1", features = ["v4", "serde"] }
chrono          = { version = "0.4", features = ["serde"] }
chrono-tz       = "0.10"

# Config
envy            = "0.4"

# Error handling
thiserror       = "2"
anyhow          = "1"

# Observability
tracing                   = "0.1"
tracing-subscriber        = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
futures         = "0.3"
base64          = "0.22"
hex             = "0.4"
rand            = "0.8"
sha2            = "0.11"
tar             = "0.4"
flate2          = "1"
walkdir         = "2"
http            = "1"
url             = "2"

[dev-dependencies]
testcontainers          = "0.27"
testcontainers-modules  = { version = "0.15", features = ["postgres"] }
proptest                = "1"
tokio                   = { version = "1", features = ["full", "test-util"] }
axum-test               = "21"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
